--- a/components/footer.module.css
+++ b/components/footer.module.css
@@ -29,6 +29,7 @@
 
 /* bootstrap extends */
 .footer .row {
+    height: 50px;
     align-items: center;
 }
 
@@ -39,19 +40,24 @@
 }
 
 .dropdownMenuButton {
-    width: 160px; 
+    width: 160px;
     font-size: 0.9rem;
     font-weight: lighter;
 }
 
-.contacts p {
-    margin-bottom: 0;
-    font-weight: bold;
+@media (max-width: 768px) {
+    .dropdownMenuButton {
+       width: 100%;
+       padding-bottom: 15px;
+       text-align: center;
+    }
 }
 
-.contacts p:last-child {
+.contacts p {
+    font-weight: bold;
     text-align: center;
 }
+
 
 .copyright {
     text-align: right;
