--- a/components/footer.module.css
+++ b/components/footer.module.css
@@ -9,8 +9,6 @@
     z-index: 10;
 }
 
-
-
 #copyright {
     text-align: right;
 }
@@ -23,26 +21,25 @@
 
 /* bootstrap extends */
 .footer .row {
+    position: relative;
     height: 50px;
     align-items: center;
 }
 
-.footer .dropup {
-    display: flex;
-    justify-content: center;
-    padding: 5px 0;
+
+.dropdownMenuButton button {
+    font-size: 0.8rem;
 }
 
-.dropdownMenuButton {
-    font-size: 0.9rem;
-    font-weight: lighter;
+@media (max-width: 900px) {
+    .dropdownMenuButton button {
+        font-size: 0.8rem;
+    }
 }
 
 @media (max-width: 768px) {
     .dropdownMenuButton {
-       width: 100%;
-       padding-bottom: 15px;
-       text-align: center;
+        width: 100%;
     }
 }
 
@@ -58,6 +55,12 @@
     }
 }
 
+@media (max-width: 950px) {
+    .upperContact {
+        font-size: 0.7rem;
+    }
+}
+
 @media (min-width: 768px) {
     .lowerContact {
         display: none;
@@ -65,6 +68,7 @@
 }
 
 .copyright {
+    padding-left: 0;
     text-align: right;
 }
 
