--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,35 @@
-html,
+/* bootstrap extends */
+
 body {
-  padding: 0;
+  position: relative;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #ffffff;
+  text-align: left;
+  background-color: #3A3B3B;
+  z-index: 0;
 }
 
 a {
+  color: #ffffff;
+  text-decoration: none;
+  background-color: transparent;
+}
+
+a:hover {
+  color: inherit;
+  text-decoration: underline;
+}
+
+a:not([href]) {
   color: inherit;
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+a:not([href]):hover {
+  color: inherit;
+  text-decoration: none;
 }
