Done debug of changing context for 'main-content'. And stack in changing CSS for breadcrumb.

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -7,3 +7,21 @@
     padding-left: 0;
     padding-right: 0;
 }
+
+.mainWrapper .container {
+    margin-left: 0;
+}
+
+.mainContentsWrapper {
+    display: block;
+}
+
+/* Bootstrap extention */
+
+.breadcrumbWrapper > .breadcrum {
+    background-color: transparent !important;
+}
+
+.breadcrumbWrapper > .breadcrumb-item + .breadcrumb-item::before {
+    content: ">";
+  }
