Found a way to change CSS of 'bootstrap-react' component.

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -18,10 +18,10 @@
 
 /* Bootstrap extention */
 
-.breadcrumbWrapper > .breadcrum {
+.breadcrumNav ol {
     background-color: transparent !important;
 }
 
-.breadcrumbWrapper > .breadcrumb-item + .breadcrumb-item::before {
+.breadcrumItem + .breadcrumItem::before {
     content: ">";
   }
