--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,3 +33,43 @@ a:not([href]):hover {
   color: inherit;
   text-decoration: none;
 }
+
+/* 'top-menu.module.css'で指定しきれない為、'globals.css'に記述 */
+.nav-tabs {
+  border-bottom: 1px solid #3A3B3B;
+  padding-bottom: 1px;
+}
+
+.nav-tabs .nav-item {
+  border-left: transparent;
+  border-right: transparent;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.nav-tabs .nav-item:not(:first-child, :last-child) {
+  border-left: 1px solid rgba(12, 12, 12, 0.8);
+  border-right: 1px solid rgba(12, 12, 12, 0.8);
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
+.nav-tabs .nav-link:hover, .nav-tabs .nav-link:focus {
+  border-top-color: transparent;
+  border-bottom-color: transparent;
+}
+
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+  height: 100%;
+  color: #ffffff;
+  background-color: #3a3b3b;
+  border-color: transparent;
+}
+
+/* 'top-menu.module.css'で指定しきれない為、'globals.css'に記述 */
+.nav-pills .nav-link {
+  border-radius: 0;
+}
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+  background-color: gray;
+}
