--- a/components/subLayouts/left-menu.module.css
+++ b/components/subLayouts/left-menu.module.css
@@ -29,16 +29,12 @@
 }
 
 .leftMenuNavItems:hover {
-    background-color: rgba(211, 211, 211, 0.5);
+    background-color: #3a3b3bbe;
 }
 
 .leftMenuNavItems img {
     width: 20px;
     height: 20px;
-}
-
-.leftMenuNavItems.nav-item > a.nav-link.active {
-    background-color: gray;
 }
 
 @media (max-width: 768px) {
