--- a/public/column-site/css/main.css
+++ b/public/column-site/css/main.css
@@ -8,6 +8,10 @@ h1, h2, h3, h4, h5, img, a {
 }
 
 /* general */
+body {
+    position: relative;
+}
+
 a {
     color: #000;
 }
@@ -16,40 +20,45 @@ a:hover {
     color: #000;
 }
 
-.heading {
-    padding: 1.5rem;
+.heading h2 {
+    margin: 40px 0;
+    font-size: 2.5rem;
 }
 
 
 /* header */
-header, footer {
-    display: flex;
-    align-items: center;
+header {
     width: 100%;
-    height: 70px;
-    padding: 20px 0;
+    height: 80px;
     background-color: #15f;
     color: #fff;
+    position: fixed;
+    top: 0;
+    z-index: 10;
 }
 
-header img {
+header .container {
+    margin-top: 5px;
+}
+
+.header-logo img {
     float: left;
-    width: 120px;
+    width: 110px;
     height: auto;
+    position: absolute;
 }
 
 header h1 {
     text-align: center;
+    font-size: 3rem;
 }
 
 /* mian content */
 .cards {
-    margin-bottom: 50px;
+    margin: 80px 0;
 }
 
-.cards h2 {
-    margin: 40px 0;
-}
+
 
 .card {
     position: relative;
@@ -95,6 +104,7 @@ header h1 {
 .goTop-wrapper {
     text-align: right;
 }
+
 .goTop {
     display: inline-flex;
     align-items: baseline;
@@ -103,6 +113,11 @@ header h1 {
     background-color: #15f;
     color: #fff;
     border-radius: 5px 5px 0 0;
+}
+
+.goTop:hover, .goTop:focus, .goTop:visited {
+    text-decoration: none;
+    color: #fff;
 }
 
 .goTop p {
@@ -115,9 +130,24 @@ header h1 {
 }
 
 /* footer */
+footer {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    background-color: #15f;
+    color: #fff;
+}
+
 #footerContents {
     display: flex;
     align-items: center;
+    position: relative;
+}
+
+footer img {
+    margin-right: 50px;
+    width: 120px;
+    height: auto;
 }
 
 .footer-nav {
@@ -134,5 +164,8 @@ header h1 {
 }
 
 .copyright {
+    margin-bottom: 0;
     text-align: right;
+    position: absolute;
+    right: 0;
 }
