--- a/public/column-site/css/main.css
+++ b/public/column-site/css/main.css
@@ -13,18 +13,17 @@ body {
 }
 
 a {
-    color: #000;
+    color: #fff;
 }
 
 a:hover {
-    color: #000;
+    color: #fff;
 }
 
 .heading h2 {
     margin: 40px 0;
     font-size: 2.5rem;
 }
-
 
 /* header */
 header {
@@ -41,6 +40,10 @@ header .container {
     margin-top: 5px;
 }
 
+header a:hover, header a:focus, header a:visited {
+    text-decoration: none;
+}
+
 .header-logo img {
     float: left;
     width: 110px;
@@ -54,23 +57,23 @@ header h1 {
 }
 
 /* mian content */
-.cards {
+.cards, .column-page-wrapper {
     margin: 80px 0;
 }
-
-
 
 .card {
     position: relative;
     bottom: 0;
     margin-bottom: 30px;
-    transition: all 0.3s ease;
+    color: #000;
+    transition: bottom 0.3s ease;
     border: 1px solid #eee;
     border-radius: 5px;
 }
 
 .card:hover {
     bottom: 10px;
+    color: #000;
 }
 
 .card img {
@@ -120,6 +123,12 @@ header h1 {
     color: #fff;
 }
 
+.goTop::after {
+    font-family: FontAwesome;
+    content: "\f062";
+    font-weight: 200;
+}
+
 .goTop p {
     margin: 0 10px 0 0;
 }
@@ -136,6 +145,8 @@ footer {
     width: 100%;
     background-color: #15f;
     color: #fff;
+    position: relative;
+    z-index: 10;
 }
 
 #footerContents {
@@ -168,4 +179,85 @@ footer img {
     text-align: right;
     position: absolute;
     right: 0;
+}
+
+/*
+*
+* コラムページ
+*
+*/
+
+.column-page-wrapper {
+    position: relative;
+}
+
+.left-menu-nav {
+    padding: 20px;
+    border: 3px solid #eee;
+    border-radius: 5px;
+    background-color: rgba(210, 210, 210, 0.2);
+    color: #000;
+}
+
+.left-menu-nav h3 {
+    margin-bottom: 20px;
+    padding-bottom: 5px;
+    font-size: 2rem;
+    border-bottom: 3px solid #eee;
+}
+
+.left-menu-nav ul {
+    margin-left: 20px;
+    margin-bottom: 30px;
+    text-align: left;
+}
+
+.left-menu-nav ul li {
+    margin: 15px 0;
+    border-bottom: 1px solid #eee;
+    list-style-type: disc;
+}
+
+.left-menu-nav ul li::marker {
+    color: #aaa;
+}
+
+.left-menu-to-top {
+    margin-bottom: 20px;
+    color: #000;
+    text-align: left;
+    text-decoration: underline;
+}
+
+.left-menu-to-top:hover, .left-menu-to-top:focus, .left-menu-to-top:visited {
+    color: #000;
+}
+
+.column-page-wrapper img {
+    margin: 20px;
+    width: auto;
+    height: 100%;
+    border: 1px solid #eee;
+    border-radius: 5px;
+
+}
+
+.column-content-list {
+    margin-top: 30px;
+    margin-left: -40px;
+    padding: 30px;
+    text-align-last: left;
+    list-style-type: none;
+}
+
+.column-content-list li {
+    margin: 10px;
+}
+
+.column-content-list li::before {
+    padding-right: 5px;
+    font-family: FontAwesome;
+    content: "\f00c";
+    font-weight: 200;
+    color: #aaa;
 }
