--- a/public/column-site/css/main.css
+++ b/public/column-site/css/main.css
@@ -18,7 +18,7 @@ a:hover {
 
 .heading h2 {
     margin: 40px 0;
-    font-size: 2.5rem;
+    font-size: 2rem;
 }
 
 /* header */
@@ -27,13 +27,9 @@ header {
     height: 80px;
     background-color: #15f;
     color: #fff;
-    position: fixed;
+    position: sticky;
     top: 0;
     z-index: 10;
-}
-
-header .container {
-    margin-top: 5px;
 }
 
 header a:hover, header a:focus, header a:visited {
@@ -41,19 +37,20 @@ header a:hover, header a:focus, header a:visited {
 }
 
 .header-logo img {
-    float: left;
+    position: absolute;
     width: 110px;
     height: auto;
-    position: absolute;
+    float: left;
 }
 
 header h1 {
+    padding-top: 15px;
     text-align: center;
-    font-size: 3rem;
+    font-size: 2.5rem;
 }
 
 /* mian content */
-.cards, .column-page-wrapper {
+.cards, .column-layout-wrapper {
     margin: 80px 0;
 }
 
@@ -183,23 +180,28 @@ footer img {
 *
 */
 
-.column-page-wrapper a {
+.column-layout-wrapper a {
     color: #000;
 }
 
-.column-page-wrapper a:hover, .left-menu-to-top:focus, .left-menu-to-top:visited {
+.column-layout-wrapper a:hover, .left-menu-to-top:focus, .left-menu-to-top:visited {
     color: #000;
 }
 
-.column-page-wrapper {
+.column-layout-wrapper {
+    justify-content: space-between;
     position: relative;
 }
 
 .left-menu-nav {
     padding: 20px;
+    height: fit-content;
     border: 3px solid #eee;
     border-radius: 5px;
     background-color: rgba(210, 210, 210, 0.2);
+    position: -webkit-sticky;
+    position: sticky;
+    top: 80px;
 }
 
 #leftMenuNav.fixed {
@@ -209,7 +211,7 @@ footer img {
 .left-menu-nav h3 {
     margin-bottom: 20px;
     padding-bottom: 5px;
-    font-size: 2rem;
+    font-size: 1.5rem;
     border-bottom: 3px solid #eee;
 }
 
@@ -239,13 +241,17 @@ footer img {
     display: inline-flex;
 }
 
+.column-content:not(:last-child) {
+    margin-bottom: 50px;
+    
+}
+
 .column-content img {
     border: 1px solid #eee;
     margin: 0 20px;
 }
 
 .column-content-list {
-    margin: 0 20px;
     text-align: left;
     list-style-type: none;
 }
@@ -260,4 +266,23 @@ footer img {
     content: "\f00c";
     font-weight: 200;
     color: #aaa;
+}
+
+/** media query **/
+@media (max-width: 992px) {
+    .left-menu-nav h3 {
+        font-size: 1rem;
+    }
+
+    .left-menu-nav ul li {
+        font-size: 0.8rem;
+    }
+
+    .left-menu-to-top {
+        font-size: 0.8rem;
+    }
+
+    .column-content-list li {
+        font-size: 0.8rem;
+    }
 }
