--- a/components/subLayouts/footer.module.css
+++ b/components/subLayouts/footer.module.css
@@ -1,7 +1,7 @@
 /* properties for footer */
 .footer {
     width: 100%;
-    position: absolute;
+    position: sticky;
     align-items: center;
     bottom: 0;
     padding: 5px 15px;
