--- a/components/subLayouts/frontend-coding.module.css
+++ b/components/subLayouts/frontend-coding.module.css
@@ -1,4 +1,45 @@
+.fecVideoContent {
+    margin: 30px 0 50px 0;
+}
+
+.fecVideoContent h2 {
+    margin-bottom: 15px;
+    font-size: 1.2rem;
+}
+
+.fecVideoContent ul {
+    padding: 0 15px;
+}
+
+.fecVideoContent li {
+    font-size: 0.8rem;
+    list-style-type: none;
+}
+
+.listWithIcon {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 15px;
+    padding-bottom: 5px;
+    border-bottom: 1px solid #aaa;
+    text-align: left;
+}
+
+.languageIcon, .listWithIcon li {
+    align-self: flex-start;
+}
+
 .htmlPreview {
-    max-width: 100%;
     height: auto;
+    margin-bottom: 20px;
+}
+
+.languageIcon {
+    margin: 2px 0;
+    padding: 1px 4px;
+    font-size: 0.5rem;
+    background-color: #fff;
+    color: #333;
+    border-radius: 5px;
+    opacity: 0.8;
 }
