--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -14,6 +14,7 @@
 .topMenuPosition {
     position: sticky;
     top: 0;
+    z-index: 10;
 }
 
 .mainWrapper .container {
@@ -27,6 +28,7 @@
 /* Bootstrap extention */
 .breadcrumNav {
     background-color: #3A3B3B !important;
+    box-shadow: 0px 5px 15px -10px #130024;
 }
 
 
