--- a/components/subLayouts/frontend-coding.module.css
+++ b/components/subLayouts/frontend-coding.module.css
@@ -35,7 +35,7 @@
 }
 
 .languageIcon {
-    margin: 2px 0;
+    margin-bottom: 3px;
     padding: 1px 4px;
     font-size: 0.5rem;
     background-color: #fff;
