--- a/components/subLayouts/frontend-coding.module.css
+++ b/components/subLayouts/frontend-coding.module.css
@@ -30,13 +30,8 @@
     align-self: flex-start;
 }
 
-.htmlPreview {
-    height: auto;
-    margin-bottom: 20px;
-}
-
 .languageIcon {
-    margin-bottom: 3px;
+    margin-bottom: 5px;
     padding: 1px 4px;
     font-size: 0.5rem;
     background-color: #fff;
@@ -44,3 +39,13 @@
     border-radius: 5px;
     opacity: 0.8;
 }
+
+.listWithIcon li:not(:last-child) {
+    padding-bottom: 5px;
+}
+
+.htmlPreview {
+    height: auto;
+    margin-bottom: 20px;
+}
+
