--- a/components/subLayouts/frontend-coding.module.css
+++ b/components/subLayouts/frontend-coding.module.css
@@ -1,3 +1,5 @@
+@import "/styles/_variables.scss";
+
 .fecVideoContent {
     margin: 30px 0 50px 0;
 }
@@ -45,6 +47,7 @@
 }
 
 .htmlPreview {
+    width: 100%;
     height: auto;
     margin-bottom: 20px;
 }
