--- a/components/subLayouts/main-content.module.scss
+++ b/components/subLayouts/main-content.module.scss
@@ -1,5 +1,17 @@
 @import "../../styles/_variables.scss";
 
+.caption {
+    display: flex;
+    align-items: center;
+    font-size: 0.7rem;
+    color: #ddd;
+
+    p {
+        margin-bottom: 0;
+        margin-left: 10px;
+    }
+}
+
 .fecVideoContent {
     margin: 30px 0 50px 0;
 }
@@ -52,3 +64,11 @@
     margin-bottom: 20px;
 }
 
+.goToAnotherPageWrapper {
+    display: flex;
+    align-items: baseline;
+
+    a {
+        margin-left: 10px;
+    }
+}
