Edit; made some links which is not linkable to be disabled. Delete; breadcrumb due to not in use.

--- a/components/subLayouts/footer.module.scss
+++ b/components/subLayouts/footer.module.scss
@@ -31,6 +31,12 @@
     font-weight: lighter;
 }
 
+.dropdown-item {
+	&:disabled {
+		color: #333;
+	}
+}
+
 @media (max-width: 900px) {
     .dropdownMenuButton button {
         font-size: 0.7rem;
