--- a/public/column-site/css/main.css
+++ b/public/column-site/css/main.css
@@ -50,12 +50,6 @@ header a:hover, header a:focus, header a:visited {
     text-decoration: none;
 }
 
-.header-logo img {
-    position: absolute;
-    width: 120px;
-    float: left;
-}
-
 header h1 {
     padding-top: 15px;
     text-align: center;
@@ -63,11 +57,6 @@ header h1 {
 }
 
 @media (max-width: 768px) {
-    .header-logo img {
-        width: 100px;
-        padding-top: 7px;
-    }
-
     header h1 {
         padding-top: 20px;
         font-size: 2rem;
@@ -78,11 +67,6 @@ header h1 {
     header {
         height: 70px;
     }
-
-    .header-logo img {
-        width: 80px;
-    }
-
     header h1 {
         padding-top: 22px;
         font-size: 1.5rem;
@@ -124,28 +108,8 @@ header h1 {
     font-size: 1rem;
 }
 
-.banners-wrapper h2 {
-    padding-bottom: 20px;
-    border-bottom: 2px solid red;
-}
-
-#relatedSites {
-    margin-bottom: 50px;
-}
-
-.banner {
-    margin-bottom: 30px;
-    border: 1px solid #eee;
-    border-radius: 5px;
-}
-
-.banner img {
-    margin: 0.5rem auto;
-    width: 100%;
-}
-
 .goTop-wrapper {
-    text-align: right;
+    text-align: center;
 }
 
 .goTop {
@@ -155,7 +119,6 @@ header h1 {
     padding: 10px 15px;
     background-color: #15f;
     color: #fff;
-    border-radius: 5px 5px 0 0;
 }
 
 .goTop:hover, .goTop:focus, .goTop:visited {
@@ -173,11 +136,6 @@ header h1 {
     margin: 0 10px 0 0;
 }
 
-.goTop img {
-    width: 10px;
-    height: 10px;
-}
-
 @media (max-width: 992px) {
     .goTop p {
         font-size: 0.8rem;
@@ -192,89 +150,18 @@ header h1 {
 footer {
     display: flex;
     align-items: center;
+	justify-content: center;
     width: 100%;
+	height: 50px;
     background-color: #15f;
     color: #fff;
     position: relative;
     z-index: 10;
 }
 
-.footer-wrapper {
-    display: flex;
-    align-items: center;
-    position: relative;
-}
-
-.footer-logo {
-    margin-right: 30px;
-}
-
-footer img {
-    width: 120px;
-    height: auto;
-}
-
-.footer-nav {
-    margin-bottom: 0;
-}
-
-.footer-nav li {
-    display: inline-block;
-}
-
-.footer-nav li a {
-    color: #fff;
-}
-
-.divideFooterNavItems {
-    margin: 0 10px;
-}
-
-.copyright {
-    display: block;
-    margin-bottom: 0;
-    position: absolute;
-    right: 0;
-}
-
-@media (max-width: 992px) {
-    .footer-nav li a, .divideFooterNavItems, .copyright {
-        font-size: 0.8rem;
-    }
-}
-
-@media (max-width: 768px) {
-    footer img {
-        width: 100px;
-    }
-
-    .divideFooterNavItems {
-        margin: 0 5px;
-    }
-
-    .copyright {
-        bottom: 5px;
-    }
-}
-
-@media (max-width: 576px) {
-    footer img {
-        width: 80px;
-    }
-
-    .footer-nav li a, .divideFooterNavItems, .copyright {
-        font-size: 0.5rem;
-    }
-
-    .copyright {
-        position: unset;
-    }
-}
-
-
 /*
 *
-* コラムページ
+* 子ページ
 *
 */
 
