--- a/public/column-site/css/main.css
+++ b/public/column-site/css/main.css
@@ -74,7 +74,7 @@ header h1 {
 }
 
 /* mian content */
-.cards, .column-layout-wrapper {
+.cards, .articles-wrapper {
     margin: 80px 0;
 }
 
@@ -84,8 +84,6 @@ header h1 {
     margin-bottom: 30px;
     color: #000;
     transition: bottom 0.3s ease;
-    border: 1px solid #eee;
-    border-radius: 5px;
 }
 
 .card:hover {
@@ -165,36 +163,35 @@ footer {
 *
 */
 
-.column-layout-wrapper a {
+.articles-wrapper a {
     color: #000;
 }
 
-.column-layout-wrapper a:hover, .left-menu-to-top:focus, .left-menu-to-top:visited {
+.articles-wrapper a:hover, .left-menu-to-top:focus, .left-menu-to-top:visited {
     color: #000;
 }
 
-.column-layout-wrapper {
+.articles-wrapper {
     position: relative;
 }
 
-.column-layout-wrapper a {
+.articles-wrapper a {
     margin-bottom: 10px;
     border-bottom: 1px solid #eee;
     transition: all 0.3s ease;
 }
 
-.column-layout-wrapper a:hover, .left-menu-to-top:hover {
+.articles-wrapper a:hover, .left-menu-to-top:hover {
     color: #777;
-    border-color: red;
+    border-color: black;
     text-decoration: none;
 }
 
 .left-menu-nav {
     padding: 20px;
     height: fit-content;
-    border: 3px solid #eee;
-    border-radius: 5px;
-    background-color: rgba(210, 210, 210, 0.2);
+    border: 5px solid #eee;
+    background-color: rgba(255, 228, 203, 0.2);
     position: -webkit-sticky;
     position: sticky;
     top: 80px;
@@ -205,7 +202,6 @@ footer {
     padding-bottom: 5px;
     font-size: 1.5rem;
     letter-spacing: 4px;
-    border-bottom: 3px solid #eee;
 }
 
 .left-menu-nav ul {
@@ -235,32 +231,24 @@ footer {
     position: inherit;
 }
 
-.column-content {
+.article-content {
     display: inline-flex;
 }
 
-.column-content:not(:last-child) {
+.article-content:not(:last-child) {
     margin-bottom: 50px;
     
 }
 
-.column-content img {
+.article-content img {
     border: 1px solid #eee;
     margin: 0 20px;
 }
 
-.column-content-list {
+.article-content-list {
     width: 100%;
     text-align: left;
     list-style-type: none;
-}
-
-.column-content-list li a::before {
-    padding-right: 5px;
-    font-family: FontAwesome;
-    content: "\f00c";
-    font-weight: 200;
-    color: #aaa;
 }
 
 
@@ -280,7 +268,7 @@ footer {
         font-size: 0.8rem;
     }
 
-    .column-content-list li {
+    .article-content-list li {
         font-size: 0.8rem;
     }
 }
@@ -290,28 +278,28 @@ footer {
         margin-left: 15px;
         margin-right: 15px;
     }
-    .column-content img {
+    .article-content img {
         max-width: 50%;
         margin: 0 30px 0 0;
         padding-left: 0;
     }
 
-    .column-content-list {
+    .article-content-list {
         max-width: 50%
     }
 }
 
 @media (max-width: 576px) {
-    .column-content {
+    .article-content {
         display: flex;
         flex-direction: column;
     }
 
-    .column-content img {
+    .article-content img {
         max-width: 100%;
     }
 
-    .column-content-list {
+    .article-content-list {
         max-width: 100%;
         margin-top: 50px;
     }
