--- a/public/mockup-site/css/main.css
+++ b/public/mockup-site/css/main.css
@@ -243,10 +243,10 @@ footer {
 .article-content img {
     border: 1px solid #eee;
     margin: 0 20px;
+	height: 100%;
 }
 
 .article-content-list {
-    width: 100%;
     text-align: left;
     list-style-type: none;
 }
